[gd_scene load_steps=4 format=3 uid="uid://ubtqhpq1twt8"]

[ext_resource type="Script" path="res://scripts/GenericFirearm.gd" id="1_7yd0r"]
[ext_resource type="Texture2D" uid="uid://yi13tdw4u6j6" path="res://assets/rifle.png" id="2_wo5ws"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nleb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wo5ws")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Rifle" type="Node2D"]
script = ExtResource("1_7yd0r")

[node name="GunSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nleb1")

[node name="FiringPoint" type="Node2D" parent="GunSprite"]
position = Vector2(32, -6)
